# hl-ros-pkg

./: ProjectHome.md
android_telehead/: android_telehead.apk  default.properties  manifest.xml
android_telehead/android_res/values/: common_strings.xml
nao/head_orienter/: CMakeLists.txt  mainpage.dox
nao/head_orienter/src/: HeadOrienter.py
nao/nao_camera/: CMakeLists.txt
nao/nao_camera/launch_nao/: exposeCameraFeed.launch
nao/nao_camera/launch_pc/: camera_proxy.launch  startCameraFeedOnNao.sh
nao/nao_camera/src/: nao_camera.cpp
nao/nao_choregraphe_behaviors/: mitll_open_house.crg
nao/nao_crosscompile/: nao_basic.diamondback.rosinstall  private.cmake.patch
nao/pose_mimic/: CMakeLists.txt
nao/pose_mimic/launch/: skeletal_tracker.launch
rosjava_tf/android_tf_tools/res/values/: strings.xml
rosjava_tf/rosjava_android_gps/: .classpath  .project  manifest.xml
rosjava_tf/rosjava_android_gps/res/values/: strings.xml
trunk/android_telehead/: AndroidManifest.xml  ros.properties
trunk/android_telehead/res/layout/: main.xml
trunk/nao/head_orienter/: manifest.xml
trunk/nao/nao_camera/: CMakeLists.txt  manifest.xml
trunk/nao/nao_choregraphe_behaviors/: README.txt  harder_better_faster.crg  macarena.crg  technologic.crg
trunk/nao/nao_crosscompile/: Makefile.bullet.patch  env.sh  tf.CMakeLists.txt.patch
trunk/nao/pose_mimic/: mainpage.dox  manifest.xml
trunk/rosjava_tf/android_tf_tools/: .classpath
trunk/rosjava_tf/rosjava_android_gps/: AndroidManifest.xml  ros.properties
trunk/rosjava_tf/rosjava_tf_core/: .classpath
(+16 files in other folders)
